--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,6 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 16
-      - run: yarn install --frozen-lockfile
+      - run: npm ci
       - run: script/build
-      - run: yarn prettier --check src
+      - run: npm exec prettier --check src
