--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "typescript": "^4.3.2"
   },
   "dependencies": {
-    "@material/mwc-linear-progress": "^0.22.1",
+    "@material/mwc-linear-progress": "^0.25.1",
     "esp-web-flasher": "^3.2.0",
-    "lit": "^2.0.0-rc.3",
+    "lit": "^2.0.0",
     "tslib": "^2.3.1"
   }
 }
