--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "typescript": "^4.3.2"
   },
   "dependencies": {
+    "@material/mwc-button": "^0.25.3",
+    "@material/mwc-checkbox": "^0.25.3",
+    "@material/mwc-circular-progress": "^0.25.3",
+    "@material/mwc-dialog": "^0.25.3",
     "@material/mwc-linear-progress": "^0.25.1",
     "esp-web-flasher": "^3.2.0",
     "lit": "^2.0.0",
