--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@material/mwc-dialog": "^0.25.3",
     "@material/mwc-linear-progress": "^0.25.1",
     "esp-web-flasher": "^4.0.0",
+    "improv-wifi-serial-sdk": "^0.0.1",
     "lit": "^2.0.0",
     "tslib": "^2.3.1"
   }
