--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "esp-web-tools",
-  "version": "3.6.0",
+  "version": "4.0.0",
   "description": "Web tools for ESP devices",
   "main": "dist/install-button.js",
   "repository": "https://github.com/esphome/web",
@@ -25,9 +25,11 @@
     "@material/mwc-checkbox": "^0.25.3",
     "@material/mwc-circular-progress": "^0.25.3",
     "@material/mwc-dialog": "^0.25.3",
+    "@material/mwc-icon-button": "^0.25.3",
     "@material/mwc-linear-progress": "^0.25.1",
+    "@material/mwc-textfield": "^0.25.3",
     "esp-web-flasher": "^4.0.0",
-    "improv-wifi-serial-sdk": "^0.0.1",
+    "improv-wifi-serial-sdk": "^1.0.0",
     "lit": "^2.0.0",
     "tslib": "^2.3.1"
   }
