--- a/static/firmware_build/manifest.json
+++ b/static/firmware_build/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "ESPHome",
-  "version": "2021.10.3",
+  "version": "2021.11.0-dev",
   "builds": [
     {
       "chipFamily": "ESP32",
