Add support for Home Assistant domain in manifest

--- a/static/firmware_build/manifest.json
+++ b/static/firmware_build/manifest.json
@@ -1,6 +1,7 @@
 {
   "name": "ESPHome",
   "version": "2021.11.0-dev",
+  "home_assistant_domain": "esphome",
   "builds": [
     {
       "chipFamily": "ESP32",
