Allow prompting for erase

--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "@material/mwc-checkbox": "^0.25.3",
     "@material/mwc-circular-progress": "^0.25.3",
     "@material/mwc-dialog": "^0.25.3",
+    "@material/mwc-formfield": "^0.25.3",
     "@material/mwc-icon-button": "^0.25.3",
-    "@material/mwc-linear-progress": "^0.25.1",
     "@material/mwc-textfield": "^0.25.3",
     "esp-web-flasher": "^4.0.0",
     "improv-wifi-serial-sdk": "^2.1.0",
