--- a/package.json
+++ b/package.json
@@ -15,10 +15,9 @@
     "@rollup/plugin-typescript": "^8.2.1",
     "@types/w3c-web-serial": "^1.0.1",
     "prettier": "^2.3.0",
-    "rollup": "^2.50.2",
+    "rollup": "^2.70.0",
     "rollup-plugin-terser": "^7.0.2",
-    "serve": "^13.0.2",
-    "typescript": "^4.3.2"
+    "serve": "^13.0.2"
   },
   "dependencies": {
     "@material/mwc-button": "^0.25.3",
@@ -28,7 +27,7 @@
     "@material/mwc-formfield": "^0.25.3",
     "@material/mwc-icon-button": "^0.25.3",
     "@material/mwc-textfield": "^0.25.3",
-    "esp-web-flasher": "^5.0.0",
+    "esp-web-flasher": "^4.0.0",
     "improv-wifi-serial-sdk": "^2.1.0",
     "lit": "^2.0.0",
     "tslib": "^2.3.1"
