--- a/static/firmware_build/manifest.json
+++ b/static/firmware_build/manifest.json
@@ -2,6 +2,7 @@
   "name": "ESPHome",
   "version": "2022.3.0",
   "home_assistant_domain": "esphome",
+  "funding_url": "https://esphome.io/guides/supporters.html",
   "builds": [
     {
       "chipFamily": "ESP32",
