--- a/static/firmware_build/manifest.json
+++ b/static/firmware_build/manifest.json
@@ -6,7 +6,11 @@
   "builds": [
     {
       "chipFamily": "ESP32",
-      "parts": [{ "path": "sleep_sensor_v6.bin", "offset": 65536 }]
+      "parts": [        
+      { "path": "bootloader_dout_40m.bin", "offset": 4096 },
+      { "path": "partitions.bin", "offset": 32768 },
+      { "path": "boot_app0.bin", "offset": 57344 },
+      { "path": "sleep_sensor_v6.bin", "offset": 65536 }]
     }
 
   ]
