--- a/static/firmware_build/manifest.json
+++ b/static/firmware_build/manifest.json
@@ -1,9 +1,10 @@
 {
   "name": "sleep_sensor",
-  "version": "0.6",
+  "version": "0.7",
   "home_assistant_domain": "esphome",
   "funding_url": "https://esphome.io/guides/supporters.html",
   "new_install_improv_wait_time": 20,
+  "new_install_prompt_erase": true,
   "builds": [
     {
       "chipFamily": "ESP32",
@@ -11,7 +12,7 @@
       { "path": "bootloader_dio_40m.bin", "offset": 4096 },
       { "path": "partitions.bin", "offset": 32768 },
       { "path": "boot_app0.bin", "offset": 57344 },
-      { "path": "sleep_sensor_v6.bin", "offset": 65536 }]
+      { "path": "sleep_sensor_v7.bin", "offset": 65536 }]
     }
 
   ]
