--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@rollup/plugin-typescript": "^8.2.1",
+    "@rollup/plugin-terser": "^0.2.1",
     "@types/w3c-web-serial": "^1.0.1",
     "prettier": "^2.3.0",
     "rollup": "^2.50.2",
-    "rollup-plugin-terser": "^7.0.2",
     "serve": "^14.0.1",
     "typescript": "^4.3.2"
   },
