--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-json": "^6.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-typescript": "^11.1.5",
     "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^11.1.5",
     "@types/w3c-web-serial": "^1.0.3",
     "prettier": "^3.0.0",
     "rollup": "^4.3.0",
@@ -30,6 +30,7 @@
     "@material/mwc-formfield": "^0.27.0",
     "@material/mwc-icon-button": "^0.27.0",
     "@material/mwc-textfield": "^0.27.0",
+    "@material/web": "^1.2.0",
     "esptool-js": "^0.3.2",
     "improv-wifi-serial-sdk": "^2.5.0",
     "lit": "^2.8.0",
